# episteme

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_db.py
.github/workflows/: unit_tests.yaml
docs/: core_workflow.md  setup.md
src/cli/: cli.py
src/episteme/api/: schema.py
src/episteme/cli/: main.py
src/episteme/llm/: client.py  template.py
src/episteme/logic/: planner.py
src/episteme/models/: __init__.py  concept.py  log.py  task.py
src/episteme/prompt/: __init__.py  base.py  task.py
src/episteme/prompt/templates/: task_template.jinja
tests/: test_cli.py  test_llm_client.py  test_planner.py  test_prompt.py
