[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "episteme"
version = "0.1.0"
description = "CLI knowledge planner using LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.5",
    "requests>=2.32.3",
]

[project.scripts]
episteme = "episteme.cli.main:main"